import java.nio.file.Files
import java.nio.file.Paths

compileJava {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

compileTestJava {
    options.fork = true
    options.forkOptions.executable = "${getJavac(8)}"
}

javadoc {
    // Javadoc also needs access to internal APIs - but Java 8 javadoc doesn't support --add-exports
    // So we exclude the file that uses internal APIs from javadoc generation
    exclude '**/PerfReaderImpl.java'
}

dependencies {
    implementation libs.slf4j
    implementation libs.asm
    implementation libs.asm.tree
    implementation libs.asm.util
    implementation libs.autoService
    implementation libs.jctools

    def toolsJar = getToolsJar();
    if (toolsJar.getAsFile().exists()) {
        compileOnly files("${toolsJar}")
        runtimeOnly files("${toolsJar}")
    }
    implementation project(':btrace-core')
    implementation project(':btrace-runtime')
    implementation project(':btrace-compiler')

    testImplementation libs.asm.util
    testImplementation libs.slf4j.simple
    testImplementation libs.junit.jupiter
    testImplementation project(':btrace-extensions:btrace-statsd')
    testImplementation project(':btrace-extensions:btrace-utils')
}

// Exclude sources that rely on JDK-internal modules from Javadoc to avoid missing-package errors
tasks.named('javadoc').configure {
    exclude 'org/openjdk/btrace/agent/PerfReaderImpl.java'
}

task compileTestProbes {
    // Wire explicit task dependencies so the API JARs are guaranteed to exist before the classpath
    // is evaluated (mirrors the pattern used in integration-tests/build.gradle).
    dependsOn compileTestJava, processTestResources,
            ':btrace-extensions:btrace-utils:buildApiJar',
            ':btrace-extensions:btrace-statsd:buildApiJar'
    doLast {
        def path = project(':btrace-agent').sourceSets.main.runtimeClasspath

        def loader = new URLClassLoader(path.collect { f -> f.toURL() } as URL[])
        def compiler = loader.loadClass('io.btrace.compiler.Compiler')
        // Use test runtime classpath so test-only extension APIs are available
        def rtCp = sourceSets.test.runtimeClasspath

        def extraCp = files(
                buildDir.toPath().resolve("classes/java/test"),
                buildDir.toPath().resolve("classes/java/java11_dummy"),
                buildDir.toPath().resolve("resources/test")
        )
        // Resolve API JARs via archiveFile (not files(task)) so the path is concrete and
        // the task dependency above guarantees they exist.
        def utilsApi = files(project(':btrace-extensions:btrace-utils').tasks.named('buildApiJar').get().archiveFile.get().asFile)
        def statsdApi = files(project(':btrace-extensions:btrace-statsd').tasks.named('buildApiJar').get().archiveFile.get().asFile)
        def fullCp = rtCp.plus(extraCp).plus(utilsApi).plus(statsdApi)
        def cpPath = fullCp.getAsPath()
        def args = [
                "-cp", cpPath,
                "-d", buildDir.toPath().resolve("classes")
        ]

        def files = fileTree(dir: "src/test/btrace", include: '**/*.java', exclude: 'verifier/**/*.java').findAll {
            it != null
        }.collect { it }

        args.addAll(files)

        // Help verifier discover extension services by exposing classpath to System property scanning
        def oldCp = System.getProperty('java.class.path')
        try {
            System.setProperty('btrace.allow.undeclared.services', 'true')
            System.setProperty('java.class.path', cpPath)
            compiler.main(args as String[])
        } finally {
            if (oldCp != null) System.setProperty('java.class.path', oldCp)
            System.clearProperty('btrace.allow.undeclared.services')
        }
    }
}

test {
    dependsOn cleanTest
    inputs.files compileTestProbes.outputs
    testLogging.showStandardStreams = true

    def props = new Properties()
    props.load(Files.newInputStream(Paths.get(System.getenv("JAVA_HOME"), "release")))
    if (!props.getProperty("JAVA_VERSION")?.contains("1.8")) {
        jvmArgs '-XX:+IgnoreUnrecognizedVMOptions',
                '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                '--add-opens', 'java.base/jdk.internal.reflect=ALL-UNNAMED',
                '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED'
    }
    if (project.hasProperty("updateTestData")) {
        jvmArgs '-Dupdate.test.data=true'
    }
    jvmArgs "-Dtest.resources=${projectDir}/src/test/resources"
    jvmArgs "-Dproject.version=${project.version}"
}
